# quiet-library

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
public/epubjs/: README.md
public/pdfjs/: README.md
sample/: README.md  lorem.txt  os-notes.md  rfc-example.html
scripts/: ensure-dev.cjs
src/: App.tsx  index.css  main.tsx  styles.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  models.rs
src-tauri/src/commands/: bookmarks.rs  indexer.rs  library.rs  mod.rs  open.rs  search.rs
src-tauri/src/util/: extract_epub.rs  extract_pdf.rs  extract_text.rs  mod.rs  pdfium_loader.rs  snippet.rs  tantivy_index.rs
src/components/: ActionsBar.tsx  BookmarkModal.tsx  BookmarksList.tsx  FolderManager.tsx  ReaderEPUB.tsx  ReaderPDF.tsx  ReaderText.tsx  ResultsList.tsx  SearchBar.tsx
src/components/readers/: ReaderEPUB.tsx  ReaderPDF.tsx  ReaderText.tsx
src/hooks/: useDebouncedValue.ts
src/lib/: ipc.ts  pdfDocCache.ts  pdfTextCache.ts
src/types/: view.ts
src/ui/: Button.tsx  Card.tsx  Modal.tsx  Toolbar.tsx
