[package]
name = "quietlibrary"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-read-file", "window-all", "dialog-open",
  "shell-open",
  "clipboard-all",
  "path-all"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["formatting", "serde"] }
lopdf = "0.32"
tantivy = { version = "0.25", default-features = false, features = ["mmap", "lz4-compression"] }
rayon = "1.10"

# Bundle PDFium with the app so no system dependency is required.
pdfium-render = { version = "0.8.35" }
png = "0.17"
base64 = "0.22"
once_cell = "1.19"
lru = "0.12"
## EPUB/PDF content extraction deferred for now
# pulldown-cmark = "0.10"
# html2text = "0.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
